moves button over a bit to prevent line wrap in safari

--- a/part-1/what-is-composing/_what-is-composing.scss
+++ b/part-1/what-is-composing/_what-is-composing.scss
@@ -26,7 +26,7 @@
 	}
 
 	.button-popup-container-2 {
-		left: 272px;
+		left: 268px;
 		position: absolute;
 		top: 230px;
 	}
